# Retrieval-Augmented-Generation-Intelligence-Platform

./: Dockerfile.web  LICENSE  README.md  premium-ui.html  proxy.js
rag-chatbot/: .gitignore  Dockerfile  Makefile  analyze_simple.py  docker-compose.prod.yml  docker-compose.yml  performance_analysis_20250822_213328.json  performance_analysis_20250822_214349.json  performance_analysis_20250823_001558.json  performance_analysis_20250823_001608.json  pre-commit-config.yaml  pyproject.toml  requirements.txt  test_basic.py  test_upload.html
rag-chatbot/app/: main.py
rag-chatbot/app/api/: deps.py
rag-chatbot/app/api/routers/: analytics.py  (+10 more)
rag-chatbot/app/core/: config.py  logging.py  production.py  security.py
rag-chatbot/app/evals/: datasets.py  evaluator.py  harness.py
rag-chatbot/app/rag/: chunking.py  fusion.py  schemas.py
rag-chatbot/app/services/: analytics.py  cache_prewarmer.py  collaboration.py  document_intelligence.py  edge_cache.py  embedding_cache.py  embeddings.py  fast_llm.py  knowledge_graph.py  llm.py  multimodal_processor.py  performance_monitor.py  query_processor.py  recommendations.py  redis_pool.py  smart_summaries.py
rag-chatbot/app/utils/: profiler.py
rag-chatbot/data/sample/: ai_research.md  faq.md  policies.md
rag-chatbot/docker/: Dockerfile
rag-chatbot/loadtest/: k6.js
rag-chatbot/scripts/: analyze_performance.py  bench.sh  benchmark.sh  export_postman_collection.sh  ingest.sh  seed.sh
rag-chatbot/tests/: test_health.py  test_rag_modules.py
rag-chatbot/web/: app.js  index.html  multimodal.html  premium.html  styles.css
(+32 files in other folders)
